--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -42,6 +42,10 @@ jobs:
         run: npm run build
 
       - name: Test
+        env:
+          PINATAAPIKEY: ${{ secrets.PINATAAPIKEY }}
+          PINATASECRETAPIKEY: ${{ secrets.PINATASECRETAPIKEY }}
+          PINATAJWTKEY: ${{ secrets.PINATAJWTKEY }}
         run: npm run generate-types && npm run test # Types needed for tests
 
       - name: Upload coverage to Codecov
