--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
   release-please:
     name: release
     runs-on: ubuntu-latest
+    environment: publish
 
     steps:
       - uses: actions/checkout@v3
